--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [project]
 name = "google-sheets-helper"
-version = "1.1.2"
-description = "Helper module to parse data from GSheets into database-optimized DataFrames"
+version = "2.0.0"
+description = "Lightweight helper module to extract data from Google Sheets and Excel files as list of dictionaries"
 authors = [{ name = "Joao Brito"}]
 readme = "README.md"
 license = { text = "MIT" }
 requires-python = ">=3.10,<3.13"
-keywords = ["google-sheets", "pandas", "etl", "data-extraction"]
+keywords = ["google-sheets", "excel", "etl", "data-extraction", "lightweight"]
 
 classifiers = [
     "Development Status :: 5 - Production/Stable",
@@ -30,10 +30,7 @@ dependencies = [
     "google-auth-oauthlib>=0.5.0",
     "google-api-python-client>=2.0.0",
     "gspread>=6.0.0",
-    "pandas>=2.0.0",
-    "openpyxl",
-    "xlrd<2.0.0",
-    "tqdm (>=4.67.1,<5.0.0)",
+    "python-calamine>=0.4.0,<0.5.0",
 ]
 
 [project.urls]
